--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         <h1>Hello World</h1>
         <p>This is a paragraph</p>
         <p>My name is <strong>John Doe</strong></p>
+        <p>My age is <strong>25</strong></p>
+        
     </div>
 
     <!-- Afegir Bootstrap JS i dependències -->
